--- a/my_ipod/src/assets/css/Screen.css
+++ b/my_ipod/src/assets/css/Screen.css
@@ -2,4 +2,11 @@
     width: 300px;
     height: 300px;
     border: 2px solid #333;
+    background-color: aliceblue;
+}
+
+img {
+    display: absolute;
+    width: 296px;
+    height: 296px;
 }
