--- a/my_ipod/src/assets/css/Screen.css
+++ b/my_ipod/src/assets/css/Screen.css
@@ -3,6 +3,9 @@
     height: 300px;
     border: 2px solid #333;
     background-color: aliceblue;
+    overflow: hidden;
+    background-size: cover;
+    background-image: url(../images/ipod.png);
 }
 
 img {
